--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
    <!--
@@ -7,16 +7,19 @@
     Tutorial Case
     
     Tri and Succeed Sports
-    Author: 
-    Date:   
+    Author: Andrew Habel
+    Date: 02/03/2026  
 
     Filename: tss_home.html
    -->
    <meta charset="utf-8" />
    <meta name="keywords" content="triathlon, running, swimming, cycling" />
    <title>Tri and Succeed Sports</title>
+   <link href="tss_layout.css" rel="stylesheet"/>
+   <link href="tss_styles.css" rel="stylesheet"/>
+   
 </head>
-
+ 
 <body>
    <header> <img src="tss_logo.png" alt="Tri and Succeed Sports" /> </header>
    <nav>
